volexc/tests/ui/mapkey_struct_with_enum.vol
// rust:pass
// go:pass
// typescript:fail
// Struct with enum field: valid in Rust/Go, invalid in TS
enum Status {
    Active = 1
    Inactive = 2
}

struct Key {
    id: u32
    status: Status
}

struct Test {
    data: {Key:string}
}
